--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="lion.jpg"
+    />
+    <img src="lion.jpg"
+    alt="Lion"
+    />
+    <img src="lion.jpg"
+    alt="Lion"
+    title="My Lion"
+    />
   </body>
 </html>
